--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-ga4": "^2.1.0",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
