--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
+    "react-syntax-highlighter": "^16.1.0",
+    "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
