--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.14",
+    "@vercel/og": "^0.8.5",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.545.0",
     "pocketbase": "^0.26.4",
